src/test/deca/codegen/valid/created/testInstanceOf/ObjectInstanceObject.deca
// Description :
//   instance of sur meme class
//
// Résultats :
//    oke

class A{}

{
    Object a = new A() ;
    if (a instanceof Object) {
        println("oke");
    }
}